--- a/FullCalendar/FullCalendar/ClientApp/package.json
+++ b/FullCalendar/FullCalendar/ClientApp/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
     "ng-fullcalendar": "^1.6.1",
+    "ngx-bootstrap": "^3.0.1",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
